# hacs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  hacs.cabal  ptcs.cabal  tags
app/: Main.hs
src/: MyLib.hs  Opts.hs
