cabal-version:      3.0
name:               hacs
version:            0.1.0.0
synopsis:           conversion from image to command-line colour scripts

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             joshcbrown
maintainer:         joshcarlbrown@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Opts

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      JuicyPixels ^>=3.3.8,
                      ansi-terminal ^>=1.0,
                      optparse-applicative ^>=0.18.0,
                      colour
    hs-source-dirs:   src
    default-language: Haskell2010

executable hacs
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        hacs

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite hacs-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.17.2.0
